Returning early when setting a frame name to the same name.

BUG=618813

Review-Url: https://codereview.chromium.org/2053903002
Cr-Commit-Position: refs/heads/master@{#399988}

Former-commit-id: d21ac9cb13ff2eac7f141bc04b3ed9d432c6f7ee